// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button in default state matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 20px;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c1 > div,
.c0:focus :not(:disabled) .c1 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c2.c2,
.c0:focus :not(:disabled) .c2.c2 {
  fill: white;
}

.c0 .c1 > div {
  background-color: #fff;
}

.c0 .c2 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="default"
  variant="primary"
>
  text
</button>
`;

exports[`Button in loading state matches snapshot 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c1 > div {
  background-color: #f4f4f4;
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 100%;
  display: inline-block;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.c1 > div:nth-child(1) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1 > div:nth-child(2) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

.c3:hover :not(:disabled) .c2 > div,
.c3:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c3 .c2 > div {
  background-color: #fff;
}

.c4:hover :not(:disabled) .c2 > div,
.c4:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c4 .c2 > div {
  background-color: #2a2a2a;
}

.c5:hover :not(:disabled) .c2 > div,
.c5:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c5 .c2 > div {
  background-color: #2a2a2a;
}

.c6:hover :not(:disabled) .c2 > div,
.c6:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c6 .c2 > div {
  background-color: #2a2a2a;
}

.c7:hover :not(:disabled) .c2 > div,
.c7:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c7 .c2 > div {
  background-color: #fff;
}

.c8:hover :not(:disabled) .c2 > div,
.c8:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c8 .c2 > div {
  background-color: #fff;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: no-drop;
  line-height: 20px;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c2 > div,
.c0:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c9.c9,
.c0:focus :not(:disabled) .c9.c9 {
  fill: white;
}

.c0 .c2 > div {
  background-color: #fff;
}

.c0 .c9 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="default"
  disabled=""
  variant="primary"
>
  <span
    class="c1 c2 "
  >
    <div />
    <div />
    <div />
  </span>
</button>
`;

exports[`Primary Button as "default" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 20px;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c1 > div,
.c0:focus :not(:disabled) .c1 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c2.c2,
.c0:focus :not(:disabled) .c2.c2 {
  fill: white;
}

.c0 .c1 > div {
  background-color: #fff;
}

.c0 .c2 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="default"
  variant="primary"
>
  text
</button>
`;

exports[`Primary Button as "highlight" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 20px;
  color: #2a2a2a;
  background-color: #fff;
  border-color: #fff;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled) .c1 > div,
.c0:focus :not(:disabled) .c1 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c2.c2,
.c0:focus :not(:disabled) .c2.c2 {
  fill: white;
}

.c0 .c1 > div {
  background-color: #2a2a2a;
}

.c0 .c2 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #2a2a2a;
}

.c0:disabled {
  opacity: 0.6;
  color: #f9423a;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="highlight"
  variant="primary"
>
  text
</button>
`;

exports[`Primary Button as "inverse" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 20px;
  color: #2a2a2a;
  background-color: #fff;
  border-color: #fff;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c1 > div,
.c0:focus :not(:disabled) .c1 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c2.c2,
.c0:focus :not(:disabled) .c2.c2 {
  fill: white;
}

.c0 .c1 > div {
  background-color: #2a2a2a;
}

.c0 .c2 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #2a2a2a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="inverse"
  variant="primary"
>
  text
</button>
`;

exports[`Secondary Button as "default" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 20px;
  color: #2a2a2a;
  background-color: transparent;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c1 > div,
.c0:focus :not(:disabled) .c1 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c2.c2,
.c0:focus :not(:disabled) .c2.c2 {
  fill: white;
}

.c0 .c1 > div {
  background-color: #2a2a2a;
}

.c0 .c2 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #2a2a2a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="default"
  variant="secondary"
>
  text
</button>
`;

exports[`Secondary Button as "highlight" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 20px;
  color: #fff;
  background-color: transparent;
  border-color: #fff;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled) .c1 > div,
.c0:focus :not(:disabled) .c1 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c2.c2,
.c0:focus :not(:disabled) .c2.c2 {
  fill: white;
}

.c0 .c1 > div {
  background-color: #fff;
}

.c0 .c2 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="highlight"
  variant="secondary"
>
  text
</button>
`;

exports[`Secondary Button as "inverse" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 20px;
  color: #fff;
  background-color: transparent;
  border-color: #fff;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c1 > div,
.c0:focus :not(:disabled) .c1 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c2.c2,
.c0:focus :not(:disabled) .c2.c2 {
  fill: white;
}

.c0 .c1 > div {
  background-color: #fff;
}

.c0 .c2 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="inverse"
  variant="secondary"
>
  text
</button>
`;

exports[`Small Button in loading state matches snapshot 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c1 > div {
  background-color: #f4f4f4;
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 100%;
  display: inline-block;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.c1 > div:nth-child(1) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1 > div:nth-child(2) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

.c3:hover :not(:disabled) .c2 > div,
.c3:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c3 .c2 > div {
  background-color: #fff;
}

.c4:hover :not(:disabled) .c2 > div,
.c4:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c4 .c2 > div {
  background-color: #2a2a2a;
}

.c5:hover :not(:disabled) .c2 > div,
.c5:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c5 .c2 > div {
  background-color: #2a2a2a;
}

.c6:hover :not(:disabled) .c2 > div,
.c6:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c6 .c2 > div {
  background-color: #2a2a2a;
}

.c7:hover :not(:disabled) .c2 > div,
.c7:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c7 .c2 > div {
  background-color: #fff;
}

.c8:hover :not(:disabled) .c2 > div,
.c8:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c8 .c2 > div {
  background-color: #fff;
}

.c9:hover :not(:disabled) .c2 > div,
.c9:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c9 .c2 > div {
  background-color: #fff;
}

.c10:hover :not(:disabled) .c2 > div,
.c10:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c10 .c2 > div {
  background-color: #fff;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: no-drop;
  line-height: 20px;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c2 > div,
.c0:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c11.c11,
.c0:focus :not(:disabled) .c11.c11 {
  fill: white;
}

.c0 .c2 > div {
  background-color: #fff;
}

.c0 .c11 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="default"
  disabled=""
  variant="primary"
>
  <span
    class="c1 c2 "
  >
    <div />
    <div />
    <div />
  </span>
</button>
`;

exports[`Small Button matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 20px;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c1 > div,
.c0:focus :not(:disabled) .c1 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .c2.c2,
.c0:focus :not(:disabled) .c2.c2 {
  fill: white;
}

.c0 .c1 > div {
  background-color: #fff;
}

.c0 .c2 {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 20px;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 20px;
  }
}

<button
  class="c0"
  color="default"
  variant="primary"
>
  text
</button>
`;
